# libtetrahedra

./: CMakeLists.txt  README.md
include/: geometry.hpp  tetrahedra.hpp
src/: simple_construction.cpp
